<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:background="#F2F2F2"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#B0B0B0" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/vuma_menu_back"
                android:onClick="onBackPressed"
                android:src="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@android:drawable/ic_lock_lock" 
                android:contentDescription="@string/app_name"/>

        </RelativeLayout>

         <ScrollView
             android:id="@+id/scrollView1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2.30" >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >

                 <EditText
                     android:id="@+id/editText1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="26dp"
                     android:ems="10"
                     android:hint="@string/login_mail"
                     android:inputType="textEmailAddress" />

                 <EditText
                     android:id="@+id/editText2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:ems="10"
                     android:hint="@string/login_password"
                     android:inputType="textPassword" />

                 <CheckBox
                     android:id="@+id/checkBox1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="11dp"
                     android:checked="true"
                     android:text="@string/login_remember" />

                 <Button
                     android:id="@+id/button1"
                     style="@style/button_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button"
                     android:onClick="onLoginButton"
                     android:text="@string/login_text" />

             </LinearLayout>

         </ScrollView>

    </LinearLayout>