   <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:background="#F2F2F2"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B0B0B0" >

          <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/vuma_informacija"
                android:onClick="DialogInformation"
                android:src="@android:drawable/ic_menu_info_details" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_launcher" 
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button1"
                    style="@style/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:background="@drawable/button"
                    android:ems="10"
                    android:onClick="onClickRssList"
                    android:text="@string/vuma_naujienos" />

                <Button
                    android:id="@+id/button2"
                    style="@style/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button"
                    android:text="@string/vuma_tvarkarastis" />

                <Button
                    android:id="@+id/button3"
                    style="@style/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button"
                    android:text="@string/vuma_bendravimas" />

                <Button
                    android:id="@+id/button4"
                    style="@style/button_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button"
                    android:onClick="onClickContacts"
                    android:text="@string/vuma_kontaktai" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
