<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#F2F2F2"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B0B0B0" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/vuma_menu_back"
            android:onClick="onBackPressed"
            android:src="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/menu_help"
            android:onClick="DialogInformation"
            android:src="@android:drawable/ic_menu_help" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.30" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/miflogo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toRightOf="@+id/imageView3"
                    android:text="@string/contacts_mif"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_call" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_toRightOf="@+id/imageView4"
                    android:text="@string/mif_nr"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_directions" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_toRightOf="@+id/imageView5"
                    android:text="@string/mif_adress"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@drawable/fflogo" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="18dp"
                    android:layout_toRightOf="@+id/imageView6"
                    android:text="@string/contacts_ff"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_call" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="17dp"
                    android:layout_toRightOf="@+id/imageView7"
                    android:text="@string/ff_nr"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@android:drawable/ic_menu_directions" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="17dp"
                    android:layout_toRightOf="@+id/imageView8"
                    android:text="@string/ff_adress"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>