<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B0B0B0" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/vuma_menu_back"
                android:onClick="onBackPressed"
                android:src="@android:drawable/ic_menu_revert" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/textView1"
                android:src="@android:drawable/ic_menu_more" android:contentDescription="@string/menu_more"/>

        </RelativeLayout>
    
    
  <!-- Name Label -->

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingTop="10dip"
                android:textColor="#dc6800"
                android:textSize="25dip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cost_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rss_autorius"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#acacac" />
        </LinearLayout>

    </ScrollView>
  <!-- Description Label -->
  <!-- Price Label -->

</LinearLayout>